--- a/composer.json
+++ b/composer.json
@@ -28,12 +28,6 @@
   "support": {
     "issues": "https://github.com/NBCUOTS/flo/issues"
   },
-  "repositories": [
-    {
-      "type": "vcs",
-      "url": "https://github.com/ericduran/php-github-api"
-    }
-  ],
   "require": {
     "php": ">=5.5.9",
     "drupal/coder": "7.2.4",
@@ -47,7 +41,7 @@
     "symfony/process": "2.6.4",
     "symfony/yaml": "2.6.4",
     "teqneers/php-stream-wrapper-for-git": "dev-master",
-    "knplabs/github-api": "dev-flo-branch-updates",
+    "knplabs/github-api": "dev-master",
     "vierbergenlars/php-semver": "3.0.0",
     "acquia/acquia-sdk-php-cloud-api": "*"
   },
